@@ -1,0 +1,106 @@
+# Copyright (C) 2008 Free Software Foundation, Inc.
+
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 3 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+# Please email any bugs, comments, and/or additions to this file to:
+# bug-gdb@prep.ai.mit.edu
+
+# Based on a file written by Jeff Law. (law@cs.utah.edu)
+
+if { [prepare_for_testing return-reverse.exp "return-reverse"] } {
+    return -1
+}
+
+set func1_breakloc [gdb_get_line_number "break in func1" return-reverse.c]
+set func2_breakloc [gdb_get_line_number "break in func2" return-reverse.c]
+set func3_breakloc [gdb_get_line_number "break in func3" return-reverse.c]
+
+runto main
+
+# FIXME 'record' command should say something so we know it's working.
+gdb_test "record" "" "start recording"
+
+gdb_continue_to_breakpoint "func1" ".*/return-reverse.c:$func1_breakloc"
+
+# FIXME 'set exec-dir' command should give some output so we can test.
+gdb_test "set exec-direction reverse" "" "set reverse"
+
+send_gdb "return\n"
+gdb_expect {
+    -re "Make .* return now.*y or n. $" {
+	send_gdb "y\n"
+	exp_continue
+    }
+    -re "func1 ..;.*$gdb_prompt $" {
+	send_gdb "step\n"
+	exp_continue
+    }
+    -re ".*in main after func1.*$gdb_prompt $" { pass "simple return" }
+    -re "$gdb_prompt $" { fail "simple return" }
+    timeout { fail "(timeout) simple return" }
+}
+
+return 0
+
+    # Set breakpoints in other interesting functions.
+    gdb_test "break func2" "" "break func2"
+    gdb_test "break func3" "" "break func3"
+
+    gdb_test "continue" "return -5;" "continue to return of -5"
+    send_gdb "return 5\n"
+    gdb_expect {
+	-re "Make .* return now.*y or n. $" {
+	    send_gdb "y\n"
+	    exp_continue
+	}
+	-re ".*tmp2 = func2.*$gdb_prompt $" { }
+	-re "$gdb_prompt $" { fail "did not return (integer test)" }
+	timeout { fail "(timeout) did not return (integer test)" }
+    }
+    gdb_test "next" "tmp3 = func3.*" "next over call to func2"
+
+    gdb_test "p tmp2" ".* = 5" "correct value returned (integer test)"
+
+    gdb_test "continue" "return -5.0;" "continue to return of -5.0"
+
+    # Return of a double does not work for 68hc11 (need struct return
+    # in memory).
+    setup_xfail "m6811-*-*"
+    send_gdb "return 5.0\n"
+    gdb_expect {
+	-re "Make .* return now.*y or n. $" {
+	    send_gdb "y\n"
+	    exp_continue
+	}
+	-re ".*tmp3 = func3.*$gdb_prompt $" { }
+	-re "$gdb_prompt $" { fail "did not return (double test)" }
+	timeout { fail "(timeout) did not return (double test)" }
+    }
+
+    setup_xfail "m6811-*-*"
+    gdb_test "next" "printf.*" "next over call to func3"
+
+    # This test also fails for sparc Solaris 2.3 & 2.4, but passes under 2.5
+    # At the time the `next' is issued, the floating point unit for the
+    # process is not yet initialized, and the storing of the floating
+    # point value to the floating point return register is ignored.
+    # Xfail it for current versions that are known to fail.  Presumably
+    # if some future version does initialize the floating point unit at
+    # process start, making this test pass, it will be for a version that
+    # is not xfailed.
+
+    setup_xfail "sparc-*-solaris2.3*" "sparc-*-solaris2.4*" "m6811-*-*"
+    gdb_test "p tmp3" ".* = 5.*" "correct value returned double test (known problem with sparc solaris)"
+}
+
